--- a/camweb/Views/Home/intro.cshtml
+++ b/camweb/Views/Home/intro.cshtml
@@ -4,3 +4,26 @@
 }
 <h1>Welcome to the Intro Page!</h1>
 <h3>Mariam</h3>
+
+<form>
+    <label for="number1">Enter number 1:</label>
+    <input type="number" id="number1" name="number1"/>
+
+    <label for="number2">Enter number 2: </label>
+    <input type="number" id="number2" name="number2"/>
+
+    <p>Result: <span id="output"></span></p>
+
+    <button type="button" onclick="calculate()">Submit</button>
+
+</form>
+
+<script>
+    function calculate(){
+        var number1=parseInt(document.getElementById("number1").value);
+        var number2=parseInt(document.getElementById("number2").value);
+        vae result = number1+number2;
+
+        document.getElementById("output").innerText=result;
+        }
+</script>
