--- a/camweb/Views/Home/intro.cshtml
+++ b/camweb/Views/Home/intro.cshtml
@@ -27,3 +27,8 @@
         document.getElementById("output").innerText=result;
         }
 </script>
+@section sectionAddition
+{
+    <p> Using the previously defined section 
+        to display a paragraph of text on the page you created </p>
+}
