--- a/camweb/Views/Shared/_Layout.cshtml
+++ b/camweb/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         @RenderBody()
-        <div class="section addition">
-            @RenderSection("section addition", required: false)
-            </div>
+        <div class="sectionAddition">
+            @RenderSection("sectionAddition", required: false)
+        </div>
     </div>    
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
