Intro page has title

--- a/camweb/Views/Home/intro.cshtml
+++ b/camweb/Views/Home/intro.cshtml
@@ -1,6 +1,6 @@
 @__RazorDirectiveTokenHelpers__
 {
-    ViewData["Title"]="Intro Page"
+    ViewData["Title"]="Intro Page";
 }
 <h1>Welcome to the Intro Page!</h1>
 <h3>Mariam</h3>
